--- a/Calc.html
+++ b/Calc.html
@@ -10,6 +10,7 @@
     Calculator
     </title>
 </head>
+
 <body>
 <div class="calculator">
 
@@ -28,7 +29,7 @@
 <button type="button" class="calculator_button">1</button>
 <button type="button" class="calculator_button">2</button>
 <button type="button" class="calculator_button">3</button>
-<button type="button" class="calculator_button calculator_button_operator">x</button>
+<button type="button" class="calculator_button calculator_button_operator">*</button>
 
 <button type="button" class="calculator_button">0</button>
 <button type="button" class="calculator_button">.</button>
