--- a/Calc.html
+++ b/Calc.html
@@ -16,29 +16,32 @@
 
     <output class="calculator_result" id="result"></output>
 
-<button type="button" class="calculator_button">7</button>
-<button type="button" class="calculator_button">8</button>
-<button type="button" class="calculator_button">9</button>
-<button type="button" class="calculator_button calculator_button_operator">+</button>
+    <button class="calculator_button">7</button>
+    <button class="calculator_button">8</button>
+    <button class="calculator_button">9</button>
+    <button class="calculator_button calculator_button_operator">+</button>
 
-<button type="button" class="calculator_button">4</button>
-<button type="button" class="calculator_button">5</button>
-<button type="button" class="calculator_button">6</button>
-<button type="button" class="calculator_button calculator_button_operator">-</button>
+    <button class="calculator_button">4</button>
+    <button class="calculator_button">5</button>
+    <button class="calculator_button">6</button>
+    <button class="calculator_button calculator_button_operator">-</button>
 
-<button type="button" class="calculator_button">1</button>
-<button type="button" class="calculator_button">2</button>
-<button type="button" class="calculator_button">3</button>
-<button type="button" class="calculator_button calculator_button_operator">*</button>
+    <button class="calculator_button">1</button>
+    <button class="calculator_button">2</button>
+    <button class="calculator_button">3</button>
+    <button class="calculator_button calculator_button_operator">*</button>
 
-<button type="button" class="calculator_button">0</button>
-<button type="button" class="calculator_button">.</button>
-<button type="button" class="calculator_button">00</button>
-<button type="button" class="calculator_button calculator_button_operator">/</button>
+    <button class="calculator_button">0</button>
+    <button class="calculator_button">.</button>
+    <button class="calculator_button">00</button>
+    <button class="calculator_button calculator_button_operator">/</button>
 
-<button type="button" class="calculator_button calculator_button_clean">C</button>
-<button type="button" class="calculator_button calculator_button_equally">=</button>
+    <button class="calculator_button calculator_button_clean">C</button>
+    <button class="calculator_button calculator_button_equally">=</button>
+    <button class="calculator_button calculator_button_operator">(</button>
+    <button class="calculator_button calculator_button_operator">)</button>
 </div>
+
 
 <script src="Java.js">
 
